--- a/racing/index.html
+++ b/racing/index.html
@@ -319,7 +319,7 @@
             </div>
             <div class="text-right">
                 <div class="text-xl" style="color: var(--neon-pink)">ROOM: <span id="room-display">--</span></div>
-                <div id="role-display" class="text-xs text-gray-400 font-mono mb-1">MQTT P2P</div>
+                <div id="role-display" class="text-xs text-gray-400 font-mono mb-1">MQTT</div>
                 <button class="interactive text-xs bg-gray-800 border border-gray-600 px-2 py-1 mt-1" onclick="toggleEditor()">Map Editor</button>
                 <button class="interactive text-xs bg-gray-800 border border-gray-600 px-2 py-1 mt-1" onclick="openSaveMenu()">Load/Save Maps</button>
             </div>
