Change hotkey from 's' to 'l' for save menu
Replaced the 's' key hotkey with 'l' to open the save menu.

--- a/racing/index.html
+++ b/racing/index.html
@@ -575,7 +575,7 @@ window.onload = () => {
 
         // Hotkeys
         if(k === 'm') toggleEditor();
-        if(k === 's') openSaveMenu();
+        if(k === 'l') openSaveMenu();
         if(k === 'escape') { closeSaveMenu(); closeSettings(); }
         // Tools 1-7
         if(parseInt(k) >= 1 && parseInt(k) <= 7) {
