Change save key from 's' to 'l' in key mappings

--- a/racing/index.html
+++ b/racing/index.html
@@ -442,7 +442,7 @@ let bindings = {
     right: 'd',
     drift: ' ',
     editor: 'm',
-    save: 's', // User requested 'S' for save, despite overlap with default down. System handles both.
+    save: 'l',
     quit: 'q'
 };
 let inputs = { up: false, down: false, left: false, right: false, drift: false };
