--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -282,10 +282,10 @@
             <div class="form-group">
                 <label>Audio Mixer</label>
                 <div style="font-size:12px; display:grid; grid-template-columns: 1fr 3fr 1fr; gap:10px; align-items:center;">
-                    <span>Master</span> <input type="range" id="vol-master" min="0" max="1" step="0.1" value="0.5" oninput="Sound.setVolume('master', this.value)"> <span id="vol-disp-master">50%</span>
-                    <span>Music</span> <input type="range" id="vol-music" min="0" max="1" step="0.1" value="0.5" oninput="Sound.setVolume('music', this.value)"> <span id="vol-disp-music">50%</span>
-                    <span>SFX</span> <input type="range" id="vol-sfx" min="0" max="1" step="0.1" value="0.5" oninput="Sound.setVolume('sfx', this.value)"> <span id="vol-disp-sfx">50%</span>
-                    <span>Engine</span> <input type="range" id="vol-engine" min="0" max="1" step="0.1" value="0.5" oninput="Sound.setVolume('engine', this.value)"> <span id="vol-disp-engine">50%</span>
+                    <span>Master</span> <input type="range" id="vol-master" min="0" max="1" step="0.01" value="0.5" oninput="Sound.setVolume('master', this.value)"> <span id="vol-disp-master">50%</span>
+                    <span>Music</span> <input type="range" id="vol-music" min="0" max="1" step="0.01" value="0.1" oninput="Sound.setVolume('music', this.value)"> <span id="vol-disp-music">50%</span>
+                    <span>SFX</span> <input type="range" id="vol-sfx" min="0" max="1" step="0.01" value="0.5" oninput="Sound.setVolume('sfx', this.value)"> <span id="vol-disp-sfx">50%</span>
+                    <span>Engine</span> <input type="range" id="vol-engine" min="0" max="1" step="0.01" value="0.5" oninput="Sound.setVolume('engine', this.value)"> <span id="vol-disp-engine">50%</span>
                 </div>
             </div>
 
@@ -430,6 +430,7 @@ class SoundManager {
         this.ctx = null;
         this.nodes = {};
         this.volumes = { master: 0.5, music: 0.5, sfx: 0.5, engine: 0.3 };
+        // music credit: patrickdearteaga.com
         this.playlist = ['audio/Chiptronical.ogg', 'audio/Great_Little_Challenge.ogg', 'audio/Solve_The_Puzzle.ogg'];
         this.currentTrack = 0;
         this.noiseBuffer = null;
