Add refuel and repair button to index.html (ever notice how LLMs randomly remove stuff instead of fixing the one thing you asked about? I DO AND ITS SO ANNOYING)

--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -223,6 +223,7 @@
                 Wallet: <span id="shop-money" style="color:gold; font-weight:bold;">$0</span>
             </div>
             <button class="btn" style="margin-bottom:10px; background:var(--success);" onclick="Shop.sellAll()">SELL ALL ORES</button>
+            <button class="btn" style="margin-bottom:10px; background:var(--success);" onclick="Shop.refuelRepair()">Refuel and Repair ($10)</button>
             
             <h4 style="color:#aaa; border-bottom:1px solid #444;">SELL MINERALS</h4>
             <div id="sell-list" class="sell-list"></div>
