--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -1894,7 +1894,7 @@ class SaveSystem {
     }
     
     static saveAndReload() {
-        this.saveToSlot(0, true);
+        this.saveToSlot(0/*, true*/);
         location.reload();
     }
 
