--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -334,7 +334,7 @@
             </div>
 
             <div class="form-group">
-                <label>Save Games (LocalStorage)</label>
+                <label>Save Games (LocalStorage) (1st save slot does not work idk why)</label>
                 <div id="save-slots-container"></div>
                 <button class="btn" style="background:#555; margin-top:5px;" onclick="SaveSystem.saveAndReload()">Save & Reload Page</button>
             </div>
