new audio and program

--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -432,7 +432,7 @@ class SoundManager {
         this.nodes = {};
         this.volumes = { master: 0.5, music: 0.5, sfx: 0.5, engine: 0.3 };
         // music credit: patrickdearteaga.com
-        this.playlist = ['audio/Chiptronical.ogg', 'audio/Great_Little_Challenge.ogg', 'audio/Solve_The_Puzzle.ogg'];
+        this.playlist = ['audio/Chiptronical.ogg', 'audio/Great_Little_Challenge.ogg', 'audio/Solve_The_Puzzle.ogg', 'audio/Sneaky_Snitch.mp3'];
         this.currentTrack = 0;
         this.noiseBuffer = null;
     }
