--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -379,8 +379,8 @@
                     <button class="btn btn-small" style="width:auto;" onclick="UI.checkServers()">Check Status</button>
                 </div>
                 <div id="server-status-display" style="margin-bottom:5px; font-size:11px; max-height:60px; overflow-y:auto; background:#222; padding:5px; display:none;"></div>
-                <input type="text" id="setting-broker" value="wss://broker.emqx.io:8084/mqtt">
-                <small style="color:#777;">Grayed out while playing. Reload to change.</small>
+                <input type="text" id="setting-broker" placeholder="wss://broker.emqx.io:8084/mqtt">
+                <small style="color:#777;">No effect while playing. Reload to change.</small>
             </div>
 
             <div class="form-group">
@@ -400,7 +400,7 @@
             </div>
 
             <div class="form-group">
-                <label>Save Games (LocalStorage)</label>
+                <label>Save Games (LocalStorage) (1st slot does not work, some browsers clear localstorage so back up your saves)</label>
                 <div id="save-slots-container"></div>
                 <button class="btn" style="background:#555; margin-top:5px;" onclick="SaveSystem.saveAndReload()">Save & Reload Page</button>
             </div>
@@ -657,16 +657,19 @@ class SoundManager {
     playThud() { this.playTone(80, 'square', 0.1, 0.3); }
 
     playNextMusic() {
+      try{
         if(this.musicSource) { this.musicSource.stop(); }
+        this.currentTrack = Math.floor(Math.random() * 100) % this.playlist.length;
         const file = this.playlist[this.currentTrack];
-        this.currentTrack = (this.currentTrack + 1) % this.playlist.length;
-        
         const audio = new Audio(file);
         const source = this.ctx.createMediaElementSource(audio);
         source.connect(this.nodes.music);
         audio.onended = () => this.playNextMusic();
         audio.onerror = () => { console.log("Music load failed, skipping"); this.playNextMusic(); };
         audio.play().catch(e=>console.log("Autoplay blocked"));
+      }catch(e){
+        console.error("Error playing music:", e);
+      }
     }
     
     loadSettings() {
