--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -349,10 +349,10 @@
             <div class="form-group">
                 <label>Audio Mixer</label>
                 <div style="font-size:12px; display:grid; grid-template-columns: 1fr 3fr 1fr; gap:10px; align-items:center;">
-                    <span>Master</span> <input type="range" id="vol-master" min="0" max="1" step="0.01" value="0.5" oninput="Sound.setVolume('master', this.value)"> <span id="vol-disp-master" hidden>50%</span>
-                    <span>Music</span> <input type="range" id="vol-music" min="0" max="1" step="0.01" value="0.1" oninput="Sound.setVolume('music', this.value)"> <span id="vol-disp-music" hidden>50%</span>
-                    <span>SFX</span> <input type="range" id="vol-sfx" min="0" max="1" step="0.01" value="0.5" oninput="Sound.setVolume('sfx', this.value)"> <span id="vol-disp-sfx" hidden>50%</span>
-                    <span>Engine</span> <input type="range" id="vol-engine" min="0" max="1" step="0.01" value="0.5" oninput="Sound.setVolume('engine', this.value)"> <span id="vol-disp-engine" hidden>50%</span>
+                    <span>Master</span> <input type="range" id="vol-master" min="0" max="1" step="0.01" value="0.5" oninput="Sound.setVolume('master', this.value)"> <span id="vol-disp-master">50%</span>
+                    <span>Music</span> <input type="range" id="vol-music" min="0" max="1" step="0.01" value="0.1" oninput="Sound.setVolume('music', this.value)"> <span id="vol-disp-music">50%</span>
+                    <span>SFX</span> <input type="range" id="vol-sfx" min="0" max="1" step="0.01" value="0.5" oninput="Sound.setVolume('sfx', this.value)"> <span id="vol-disp-sfx">50%</span>
+                    <span>Engine</span> <input type="range" id="vol-engine" min="0" max="1" step="0.01" value="0.5" oninput="Sound.setVolume('engine', this.value)"> <span id="vol-disp-engine">50%</span>
                 </div>
             </div>
 
@@ -379,8 +379,8 @@
                     <button class="btn btn-small" style="width:auto;" onclick="UI.checkServers()">Check Status</button>
                 </div>
                 <div id="server-status-display" style="margin-bottom:5px; font-size:11px; max-height:60px; overflow-y:auto; background:#222; padding:5px; display:none;"></div>
-                <input type="text" id="setting-broker" value="wss://broker.emqx.io:8084/mqtt">
-                <small style="color:#777;">Grayed out while playing. Reload to change.</small>
+                <input type="text" id="setting-broker" placeholder="wss://broker.emqx.io:8084/mqtt">
+                <small style="color:#777;">No effect while playing. Reload to change.</small>
             </div>
 
             <div class="form-group">
@@ -400,7 +400,7 @@
             </div>
 
             <div class="form-group">
-                <label>Save Games (LocalStorage)</label>
+                <label>Save Games (LocalStorage) (1st slot does not work, some browsers clear localstorage so back up your saves)</label>
                 <div id="save-slots-container"></div>
                 <button class="btn" style="background:#555; margin-top:5px;" onclick="SaveSystem.saveAndReload()">Save & Reload Page</button>
             </div>
@@ -657,16 +657,19 @@ class SoundManager {
     playThud() { this.playTone(80, 'square', 0.1, 0.3); }
 
     playNextMusic() {
+      try{
         if(this.musicSource) { this.musicSource.stop(); }
+        this.currentTrack = Math.floor(Math.random() * 100) % this.playlist.length;
         const file = this.playlist[this.currentTrack];
-        this.currentTrack = (this.currentTrack + 1) % this.playlist.length;
-        
         const audio = new Audio(file);
         const source = this.ctx.createMediaElementSource(audio);
         source.connect(this.nodes.music);
         audio.onended = () => this.playNextMusic();
         audio.onerror = () => { console.log("Music load failed, skipping"); this.playNextMusic(); };
         audio.play().catch(e=>console.log("Autoplay blocked"));
+      }catch(e){
+        console.error("Error playing music:", e);
+      }
     }
     
     loadSettings() {
@@ -2336,9 +2339,11 @@ const creditsData = {
         "The laptops that were sacrificed in the making of this game"
     ]
 };
-
+//J ANK AUDIO FIX
+Sound.loadSettings()
+// bruh
 document.getElementById('credits').innerHTML = generateCreditsHTML(creditsData);
 </script>
 </body>
 </html>
-<!-- deez nutz -->
+<!-- If the original devs of megaminer are reading this, I would love to hear your feedback! -->
